# python-project-52

./: .coverage  .env.example  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml
.github/workflows/: sonarqube.yml
task_manager/: settings.py  urls.py
task_manager/labels/: admin.py  forms.py  mixins.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  test_filter.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_labels.py
task_manager/templates/: index.html
task_manager/templates/labels/: index.html
task_manager/templates/statuses/: index.html
task_manager/templates/tasks/: index.html
task_manager/users/: forms.py  tests.py  views.py
task_manager/users/migrations/: 0001_initial.py
